Bug 1326280 - Baldr: use .wasm as bytecode file format (r=bbouvier)

MozReview-Commit-ID: 5nmuLDswfWU